<resources>
    <string name="app_name">Bitotsav \'20</string>
    <string name="splash_screen_image_desc">Splash screen image</string>
    <string name="splash_screen">Splash screen</string>

    <string name="website_url">https://bitotsav.in/</string>
    <string name="facebook_url">https://www.facebook.com/bitotsav</string>
    <string name="twitter_url">https://twitter.com/bitotsav</string>
    <string name="instagram_url">https://www.instagram.com/bitotsav_20/</string>
    <string name="youtube_url">https://www.youtube.com/channel/UCnQ43YDh1dXKtTFBrERkhYw</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_icon_desc">search icon</string>
    <string name="grade_icon_desc">grade icon</string>
    <string name="user_avatar_desc">user avatar</string>
    <string name="item_avatar_desc">item avatar</string>
    <string name="event_intent_pass_key">EVENT_EXTRA_PASS</string>
    <string name="location_icon_desc">Location icon</string>
    <string name="register_icon_desc">register icon</string>
    <string name="app_shared_preferences">APP_SHARED_PREFERENCES</string>
    <string name="logged_in_user">LOGGED_IN_USER</string>
    <string name="token">TOKEN</string>
    <string name="splash_screen_image">Splash screen image</string>
    <string name="bitotsav_color_icon_desc">bitotsav color icon</string>
    <string name="about_us_text">Deemed as an institute of national importance, Birla Institute of Technology, Mesra, is one of the country\'s most honourable and distinguished educational Universities. It was founded and established by the visionary industrialist B.M. Birla over more than six decades ago, and has been creating waves of success ever since. The massive 850 acre campus has been home to diverse cultures, multitudinous talent, and inspiring leaders. \n\nBIT Mesra has not only produced some of the finest technocrats in the country, but has also churned out winners in professions as diverse as music, art, and literature. Our annual cultural extravaganza, BITOTSAV, is an affluent celebration of the rich cultural heritage that resides in our country and an attempt to revel in the euphoric essence of India\'s cultural potency. BITOTSAV has a plethora of events to realize its cause of bringing students from all spheres and from all places, together, to enjoy culture while supporting something of societal importance. As the grandeur of BITOTSAV keeps on growing, this year\'s BITOTSAV is set to be majestic: bigger and better than ever before. With enthralling events, mesmerizing nights, enticing performances by prominent celebrities, and a whole lot of dance and music, we welcome you to BITOTSAV’20.</string>
    <string name="theme_text">From the land of enigmatic mysteries since time immemorial, humans have made a staggering attempt to delve deeper into the crevices of the brain. Pouring over literature that told of ghost ships, of planes disappearing forever, of instruments going haywire, we’ve reveled in the mysteries of the Bermuda Triangle for a long time now. However, despite the glow from the recent advances in science working hard to debunk the reason behind every riddle, we still find ourselves squinting in the dark. While the Kirti Stambha has baffled us with its concept of rust-resistant iron way before industrial revolution in the western civilization, we’ve witnessed the cryptic beast dwelling in the daunting depths of Loch Ness in Scotland. Even as we’ve reasoned from the dark matter to the multiverse, history, though full of lessons, has bewildered us with the sudden decline of the Indus valley civilization. But amidst all the lingering uncertainties about the millennial old enigmas, we’ve emerged into a period where the Illuminati still does the round in discussion circles and has people on tenterhooks and where modern pagans still celebrate significant points in the natural solar year like equinoxes, solstices, May day and Halloween. From studying neurobiological processes to the elegant collision of hadrons, we’ve caved further into a world in which truth is stranger than fiction. Thus, mystery, celebrating the diversity of cultures, traditions, science and technology has made its impact on the human civilization through the relentless efforts of people. \n\nCrawling its way through the most scintillating combination of fantasy and inscrutable depictions of reality, BITOTSAV’20, through the theme- “Carnival of Conundrums”, celebrates the endless endeavor of mankind to pursue meaning and hopelessly seek mystery in order to unravel them. Through this abstract yet vivid theme, we have tried to broaden our scope and bring in a blend of folklore, festivities and fantasies into play.</string>
    <string name="online_campaign_text">Wildlife welfare or conservation is the practice of protecting wild species and their habitats in order to prevent species from going extinct. Each of the species has its own essential role in maintaining the balanced ecosystem of the earth. Even if, just one of them is rendered extinct, it can have significant cascading effects throughout the rest of the chain. Presently the condition of wildlife is not in very good shape. The IUCN estimates that 27,000 species of the ones assessed are at the risk of extinction. Through rampant poaching, illegal and uncontrolled hunting, water pollution, habitat destruction, illegal wildlife trade, irresponsible tourism and lack of awareness, humans are at the forefront of sabotaging the wildlife. \n\nTo quote the figures, we have lost 97% of the tiger population in the last 100 years, 76% of the Asian and African lions in the last 30 years, 60% of elephants have gone extinct in the last nine years along with the a significant increase in Rhino poaching for the last five years. Activities like these happen virtually so far away from us that we remain unaware and therefore unaffected by these happenings. The under-reporting of such events adds to the cause of worry and thus fuels the unawareness. \n\nThrough Bitotsav’20, we endeavour to develop a sense of awareness among us to come together and help fight the threats posed to the wildlife and lead ways to its conservation and healthy development. Our online campaign, ‘Wonders of Wildlife’ is a direct way to forge the welfare of the environment where we live in. Thus through this noble cause, we here at Bitotsav\'20, aim to conserve our environment and minimize the threats which endangers it.</string>
    <string name="social_campaign_text">\"As the world progresses towards the new age of technology and development, the green lungs of the planet slowly choke to death, the oceans roar with the senseless dumping of plastic garbage.\" \n\nPlastic, the synthetic monstrous invention, has both benefitted the world and harmed the environment. While plastics, being supple and reusable, have reduced the usage of paper bags, thus reducing the exploitation of the environment, the lack of a proper disposal system has irreparably damaged the environment. Plastics, being completely non-biodegradable in nature, are difficult to dispose off. Lack of awareness and proper management have led to large accumulation of plastic wastes. Dumping of wastes into landfills, rivers, oceans etc. not only harms the environment, but also harms life. Unlike biodegradable wastes, plastics, on weathering break down into smaller pieces of plastics. The hardest blow has been to the marine life, where the massive accumulation of plastic garbage has caused severe damage to both marine plants and animals. \n\nPlastics, which were once a boon to mankind, have now become a dangerous plague upon the environment. From the Arctic to Antartica, the Plague of Plastic has been abysmal. BITOTSAV\'20, in its new edition, strives to bring about awareness among the people about the problems caused by the immense amount of Plastic waste. With the Social Campaign, \"\"Plague of Plastic\", Team BITOTSAV encourages the proper management of plastic wastes and endeavours to instil the importance of the three Rs- Reduce, Reduce, Recycle.</string>
    <string name="faq_question_one">What are the dates for the fest?</string>
    <string name="faq_answer_one">The fest will take place from 13th – 16th February, 2020. The opening night, Heritage Night will take place on 13th February while the day events will start from 14th February.</string>
    <string name="faq_question_two">What are the registration fee for day events?</string>
    <string name="faq_answer_two">There are no registration fees for day events. All you have to do is register for the event from your login panel after signing up at www.bitotsav.in.</string>
    <string name="faq_question_three">Where can I get the passes for the nights?</string>
    <string name="faq_answer_three">The passes for the nights will be sold from the info cell from 14th to 16th February, 2020 for non-BIT students. The info cell is situated in the main campus of BIT Mesra. The rates for the same can be found at https://www.bitotsav.in/nights.html.</string>
    <string name="faq_question_four">Some events have cash prizes and others have points. What is the difference?</string>
    <string name="faq_answer_four">All flagship and some formal events have cash prizes as rewards for securing either the 1st or 2nd position in them. Apart from such events, you can participate and accumulate points in the other events to win the overall BITOTSAV Championship. To participate in the Championship, you must form a team of 6–8 members which you can register from your login panel. The detailed rules for each event with prizes (prizes worth and points) can be found at https://www.bitotsav.in/events.html.</string>
    <string name="faq_question_five">How can I contact you in case of any query?</string>
    <string name="faq_answer_five">You can contact us at 9471516677 or 8521039668 or you can drop a mail at bitotsav@bitmesra.ac.in.</string>
    <string name="nights_header_content">BITOTSAV has over the years played host to an array of celebrities from the nation as they take the stage during the nights of the fest. Be it the Band Night, EDM Night or the Pro Night, witness a star-studded line up mesmerise with their performances that\'ll surely leave you spellbound. The passes for non-BIT students for each night will be available during the fest from 14th February at the Info Cell.\n\nThe prices for the same are:\n\nBand Night (14th Feb) - Rs. 400\n\nEDM Night (15th Feb) - Rs. 500\n\nPro Night (16th Feb) - Rs. 700\n\n\nAll 3 Nights - Rs. 1200\n\nAccommodation Charges - Rs. 200\n\n\n\n\nStay tuned as the lineup for the nights of BITOTSAV\'20 will soon be revealed!</string>
    <string name="info_core_components">Built with\nAndroidx\nKotlin\nRoom Persistence Library\nLifecycle-components\nAndroid Navigation components</string>
</resources>
