<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.FaqActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/start_guide"
            app:layout_constraintGuide_begin="16dp"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="0dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/end_guide"
            app:layout_constraintGuide_end="16dp"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="0dp" />

        <TextView
            android:id="@+id/faq_title"
            android:text="FAQs"
            style="@style/font_semi_bold_24_black"
            android:textAlignment="center"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/start_guide"
            app:layout_constraintEnd_toStartOf="@id/end_guide"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/question_one"
            android:orientation="vertical"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@id/faq_title"
            app:layout_constraintStart_toEndOf="@id/start_guide"
            app:layout_constraintEnd_toStartOf="@id/end_guide"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/faq_question_one"
                style="@style/font_regular_black_20"
                android:textSize="18sp"
                android:textAlignment="viewStart"
                android:textColor="@color/md_grey_800"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/faq_answer_one"
                style="@style/font_regular_black_20"
                android:layout_marginTop="8dp"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/question_two"
            android:orientation="vertical"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@id/question_one"
            app:layout_constraintStart_toEndOf="@id/start_guide"
            app:layout_constraintEnd_toStartOf="@id/end_guide"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/faq_question_two"
                style="@style/font_regular_black_20"
                android:textSize="18sp"
                android:textAlignment="viewStart"
                android:textColor="@color/md_grey_800"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/faq_answer_two"
                style="@style/font_regular_black_20"
                android:layout_marginTop="8dp"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/question_three"
            android:orientation="vertical"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@id/question_two"
            app:layout_constraintStart_toEndOf="@id/start_guide"
            app:layout_constraintEnd_toStartOf="@id/end_guide"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/faq_question_three"
                style="@style/font_regular_black_20"
                android:textSize="18sp"
                android:textAlignment="viewStart"
                android:textColor="@color/md_grey_800"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/faq_answer_three"
                style="@style/font_regular_black_20"
                android:layout_marginTop="8dp"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/question_four"
            android:orientation="vertical"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@id/question_three"
            app:layout_constraintStart_toEndOf="@id/start_guide"
            app:layout_constraintEnd_toStartOf="@id/end_guide"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/faq_question_four"
                style="@style/font_regular_black_20"
                android:textSize="18sp"
                android:textAlignment="viewStart"
                android:textColor="@color/md_grey_800"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/faq_answer_four"
                style="@style/font_regular_black_20"
                android:layout_marginTop="8dp"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/question_five"
            android:orientation="vertical"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@id/question_four"
            app:layout_constraintStart_toEndOf="@id/start_guide"
            app:layout_constraintEnd_toStartOf="@id/end_guide"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/faq_question_five"
                style="@style/font_regular_black_20"
                android:textSize="18sp"
                android:textAlignment="viewStart"
                android:textColor="@color/md_grey_800"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/faq_answer_five"
                style="@style/font_regular_black_20"
                android:layout_marginTop="8dp"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>