<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.BitotsavActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/start_guide"
            app:layout_constraintGuide_begin="16dp"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="0dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/end_guide"
            app:layout_constraintGuide_end="16dp"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="0dp" />

        <ImageView
            android:id="@+id/color_icon"
            android:src="@drawable/colorful_icon"
            android:contentDescription="@string/bitotsav_color_icon_desc"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/start_guide"
            app:layout_constraintEnd_toStartOf="@id/end_guide"
            android:layout_width="0dp"
            android:layout_height="150dp" />

        <TextView
            android:id="@+id/about_us_label"
            android:text="About us"
            style="@style/font_semi_bold_24_black"
            android:gravity="center_horizontal"
            android:textAlignment="gravity"
            android:textColor="@color/md_black_1000"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toEndOf="@id/start_guide"
            app:layout_constraintEnd_toStartOf="@id/end_guide"
            app:layout_constraintTop_toBottomOf="@id/color_icon"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/about_us_text"
            android:text="@string/about_us_text"
            android:textAlignment="center"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/about_us_label"
            app:layout_constraintStart_toEndOf="@id/start_guide"
            app:layout_constraintEnd_toStartOf="@id/end_guide"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <View
            android:id="@+id/about_us_divider"
            android:layout_marginTop="16dp"
            android:background="@color/md_grey_200"
            app:layout_constraintStart_toEndOf="@id/start_guide"
            app:layout_constraintEnd_toStartOf="@id/end_guide"
            app:layout_constraintTop_toBottomOf="@id/about_us_text"
            android:layout_width="0dp"
            android:layout_height="1dp" />

        <TextView
            android:id="@+id/theme_label"
            android:text="Theme"
            android:layout_marginTop="16dp"
            style="@style/font_semi_bold_24_black"
            android:gravity="center_horizontal"
            android:textAlignment="gravity"
            android:textColor="@color/md_black_1000"
            app:layout_constraintStart_toEndOf="@id/start_guide"
            app:layout_constraintEnd_toStartOf="@id/end_guide"
            app:layout_constraintTop_toBottomOf="@id/about_us_divider"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/theme_title"
            android:text="Carnival of Conundrums"
            android:layout_marginTop="16dp"
            style="@style/font_semi_bold_24_black"
            android:gravity="center_horizontal"
            android:textAlignment="gravity"
            android:textColor="@color/md_orange_900"
            app:layout_constraintStart_toEndOf="@id/start_guide"
            app:layout_constraintEnd_toStartOf="@id/end_guide"
            app:layout_constraintTop_toBottomOf="@id/theme_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/theme_text"
            android:text="@string/theme_text"
            android:gravity="center_horizontal"
            android:textAlignment="center"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toEndOf="@id/start_guide"
            app:layout_constraintEnd_toStartOf="@id/end_guide"
            app:layout_constraintTop_toBottomOf="@id/theme_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <View
            android:id="@+id/theme_divider"
            android:layout_marginTop="16dp"
            android:background="@color/md_grey_200"
            app:layout_constraintStart_toEndOf="@id/start_guide"
            app:layout_constraintEnd_toStartOf="@id/end_guide"
            app:layout_constraintTop_toBottomOf="@id/theme_text"
            android:layout_width="0dp"
            android:layout_height="1dp" />

        <TextView
            android:id="@+id/online_campaign_label"
            android:text="Online Campaign"
            android:layout_marginTop="16dp"
            style="@style/font_semi_bold_24_black"
            android:textColor="@color/md_black_1000"
            android:gravity="center_horizontal"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/theme_divider"
            app:layout_constraintStart_toEndOf="@id/start_guide"
            app:layout_constraintEnd_toStartOf="@id/end_guide"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/online_campaign_title"
            android:text="Wonders of wildlife"
            android:layout_marginTop="16dp"
            style="@style/font_semi_bold_24_black"
            android:gravity="center_horizontal"
            android:textAlignment="gravity"
            android:textColor="@color/md_teal_900"
            app:layout_constraintStart_toEndOf="@id/start_guide"
            app:layout_constraintEnd_toStartOf="@id/end_guide"
            app:layout_constraintTop_toBottomOf="@id/online_campaign_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/online_campaign_text"
            android:text="@string/online_campaign_text"
            android:gravity="center_horizontal"
            android:textAlignment="center"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toEndOf="@id/start_guide"
            app:layout_constraintEnd_toStartOf="@id/end_guide"
            app:layout_constraintTop_toBottomOf="@id/online_campaign_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <View
            android:id="@+id/online_campaign_divider"
            android:layout_marginTop="16dp"
            android:background="@color/md_grey_200"
            app:layout_constraintStart_toEndOf="@id/start_guide"
            app:layout_constraintEnd_toStartOf="@id/end_guide"
            app:layout_constraintTop_toBottomOf="@id/online_campaign_text"
            android:layout_width="0dp"
            android:layout_height="1dp" />

        <TextView
            android:id="@+id/social_campaign_label"
            android:text="Social Campaign"
            android:layout_marginTop="16dp"
            style="@style/font_semi_bold_24_black"
            android:textColor="@color/md_black_1000"
            android:gravity="center_horizontal"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/online_campaign_divider"
            app:layout_constraintStart_toEndOf="@id/start_guide"
            app:layout_constraintEnd_toStartOf="@id/end_guide"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/social_campaign_title"
            android:text="Plague of plastic"
            android:layout_marginTop="16dp"
            style="@style/font_semi_bold_24_black"
            android:gravity="center_horizontal"
            android:textAlignment="gravity"
            android:textColor="@color/md_light_green_900"
            app:layout_constraintStart_toEndOf="@id/start_guide"
            app:layout_constraintEnd_toStartOf="@id/end_guide"
            app:layout_constraintTop_toBottomOf="@id/social_campaign_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/social_campaign_text"
            android:text="@string/social_campaign_text"
            android:gravity="center_horizontal"
            android:textAlignment="center"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toEndOf="@id/start_guide"
            app:layout_constraintEnd_toStartOf="@id/end_guide"
            app:layout_constraintTop_toBottomOf="@id/social_campaign_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <View
            android:id="@+id/social_campaign_divider"
            android:layout_marginTop="16dp"
            android:paddingBottom="16dp"
            android:background="@color/md_grey_200"
            app:layout_constraintStart_toEndOf="@id/start_guide"
            app:layout_constraintEnd_toStartOf="@id/end_guide"
            app:layout_constraintTop_toBottomOf="@id/social_campaign_text"
            android:layout_width="0dp"
            android:layout_height="1dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>